Fix JDK version differences